<resources>
    <string name="app_name">Mugs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_otp_button_text">Login</string>
    <string name="login_mobile_hint">Enter Mobile Number</string>
    <string name="accept_privacy_policy">accept privacy policy</string>
    <string name="let_s_begin_enter_your_number">Enter Your Email and Password</string>
    <string name="a_single_step_to_go">ENTER OTP HERE</string>
    <string name="force_exit">Force Exit</string>
    <string name="continue_here">CONTINUE</string>
    <string name="account_succesfully_created">Account Created Successfully</string>
    <string name="loginskip">Skip Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_login">Login</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="home">home</string>
    <string name="chart">chart</string>
</resources>