<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/ScrollOtp"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/limeWhite">
    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/headingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
            <!--    heading edit here -->
            <LinearLayout
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/ForceExit"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/force_exit"
                    android:textColor="#000000"
                    android:layout_gravity="end"
                    android:gravity="right"
                    android:padding="20dp"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/vectorImage"
            android:layout_below="@id/headingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--    vector image edit here-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:padding="30dp"
                    android:layout_margin="30dp"
                    android:layout_weight="1"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_two_factor_authentication_rafiki2" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vectorImage"
            android:padding="10dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/a_single_step_to_go"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.chaos.view.PinView
                    android:layout_marginBottom="0dp"
                    android:id="@+id/firstPinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:cursorVisible="true"
                    android:hint="0000"
                    android:inputType="number"
                    android:itemBackground="@drawable/login_mobile_number_bg"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cursorColor="@color/black"
                    app:cursorWidth="2dp"
                    app:hideLineWhenFilled="true"
                    app:itemCount="4"
                    app:itemHeight="60dp"
                    app:itemRadius="5dp"
                    app:itemSpacing="11dp"
                    app:itemWidth="75dp"
                    app:lineColor="@color/greyish"
                    app:lineWidth="12dp"
                    app:viewType="none" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/resendOtp"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="-2dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:tooltipText="RESEND OTP IN #) SEC"
                        android:gravity="center|start"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/resendOtpButton"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:text="RESEND OTP"
                        android:textColor="#0124EC"
                        android:textStyle="normal"
                        android:visibility="gone" />


                </LinearLayout>

                <Button
                    android:id="@+id/submit_otp_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_shape_primary"
                    android:gravity="center"
                    android:text="@string/continue_here" />

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>